--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>Willkommen auf meiner Seite!</h1>
-    <p>Ich bin Nico, angehender Informatiker EFZ.</p>
+    <p>Ich bin Vincent, ein angehender Informatiker EFZ.</p>
   </header>
 
   <main>
@@ -21,15 +21,21 @@
     <section>
       <h2>Meine Lieblingslinks</h2>
       <ul>
-        <li><a href="https://www.github.com" target="_blank">GitHub</a></li>
-        <li><a href="https://www.w3schools.com" target="_blank">W3Schools</a></li>
-        <li><a href="https://www.wikipedia.org" target="_blank">Wikipedia</a></li>
+        <li>
+          <a href="https://www.github.com" target="_blank">GitHub</a>
+        </li>
+        <li>
+          <a href="https://www.w3schools.com" target="_blank">W3Schools</a>
+        </li>
+        <li>
+          <a href="https://www.wikipedia.org" target="_blank">Wikipedia</a>
+        </li>
       </ul>
     </section>
   </main>
-
+  
   <footer>
-    <p>© 2025 Nico Čolić</p>
+    <p>© 2025 Vincent DeVries</p>
   </footer>
 </body>
 </html>
