--- a/html/projects.html
+++ b/html/projects.html
@@ -43,7 +43,7 @@
       <div class="project-grid">
         <div class="project-card" onclick="showOverlay('project1')">
           <h3>Formula 1 Voice Assistant</h3>
-          <p>A real-time strategy assistant using telemetry & AI.</p>
+          <p>A smart real-time race-Engineer using telemetry & AI.</p>
           <div class="tags">
             <span class="tag">Python</span>
             <span class="tag">AI</span>
@@ -52,7 +52,7 @@
         </div>
         <div class="project-card" onclick="showOverlay('project2')">
           <h3>Wintris</h3>
-          <p>A Tetris like Game implemented in Winforms.</p>
+          <p>A Tetris like game implemented in Winforms.</p>
           <div class="tags">
             <span class="tag">C#</span>
             <span class="tag">Winforms</span>
@@ -83,9 +83,12 @@
       <button class="overlay-close" onclick="hideOverlay()">&times;</button>
       <h2>Formula 1 Voice Assistant</h2>
       <p>
-        This project parses live F1 telemetry and enables voice commands to offer strategic insights
-        using AI (Python, Ollama with Llama3, STT/TTS). Built for real-time race decision-making.
+        This project parses live F1 telemetry and enables voice commands to provide smart strategic advice based on the current race situation.
+        It connects to a local AI and is designed to improve the game experience by making communication between race engineer and driver more realistic.
+        The user can talk to the engineer using speech-to-text (STT) and receives AI-driven advice through text-to-speech (TTS).
+        The program is still in development and is therefore not fully functional yet.
       </p>
+
     </div>
   </div>
 
@@ -94,14 +97,14 @@
       <button class="overlay-close" onclick="hideOverlay()">&times;</button>
       <h2>Wintris</h2>
       <p>
-        This game delivers a Tetris-like experience with a polished design and a variety of customization
-        options. It stores user data in a local database, displays current high scores, and allows personalized
-        key bindings and volume settings through the settings menu.
-      </p>
+        This game delivers a Tetris-like experience with a solid design and a variety of customization options.
+        It stores user data in a local database, displays current high scores, and allows personalized key bindings and volume settings through the settings menu.
+        Currently, the game only works on my PC because I didn't use relative paths when implementing it. 
+        I plan to improve this in the future and change the database type from MS SQL to SQLite to make it available for others as well.
+</p>
     </div>
   </div>
 
-  <!-- JavaScript (inline is OK) -->
   <script>
     function showOverlay(id) {
       document.getElementById(id).classList.add('active');
@@ -112,9 +115,6 @@
       document.querySelectorAll('.overlay').forEach(el => el.classList.remove('active'));
     }
 
-
-
-    // Optional: click outside to close
     document.addEventListener('click', function (e) {
       if (e.target.classList.contains('overlay')) {
         e.target.style.display = 'none';
