--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
         <nav class="footer-nav" aria-label="Footer Navigation">
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="privacy.html">Privacy Policy</a></li>
+            <li><a href="html/about.html">About</a></li>
+            <li><a href="html/projects.html">Projects</a></li>
+            <li><a href="html/contact.html">Contact</a></li>
+            <li><a href="html/privacy.html">Privacy Policy</a></li>
           </ul>
         </nav>
         <p>&copy; 2025 VinDev. All rights reserved.</p>
