--- a/html/search.html
+++ b/html/search.html
@@ -42,9 +42,17 @@
   </main>
 
   <footer>
-    <div class="footer_content">
+    <div class="footer-container">
+      <nav class="footer-nav" aria-label="Footer Navigation">
+        <ul>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="privacy.html">Privacy Policy</a></li>
+        </ul>
+      </nav>
       <p>&copy; 2025 VinDev. All rights reserved.</p>
-      <a href="privacy.html">Privacy Policy</a>
     </div>
   </footer>
 
