--- a/html/projects.html
+++ b/html/projects.html
@@ -67,7 +67,7 @@
       <div class="footer-container">
         <nav class="footer-nav" aria-label="Footer Navigation">
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="contact.html">Contact</a></li>
