--- a/html/search.html
+++ b/html/search.html
@@ -29,7 +29,7 @@
       </ul>
     </nav>
 
-    <form class="search_form" action="/search" method="GET" role="search" aria-label="Site Search">
+    <form class="search_form" action="search.html" method="GET" role="search" aria-label="Site Search">
       <input type="search" name="q" placeholder="Search projects..." aria-label="Search projects" required />
       <button type="submit" aria-label="Submit search">🔍</button>
     </form>
@@ -59,7 +59,7 @@
 
   <script>
     const pages = [
-      { title: "Home", url: "index.html", content: "Welcome to VinDev" },
+      { title: "Home", url: "../index.html", content: "Welcome to VinDev" },
       { title: "About", url: "about.html", content: "About VinDev who I am" },
       { title: "Projects", url: "projects.html", content: "Projects portfolio work code apps" },
       { title: "Contact", url: "contact.html", content: "Contact me get in touch email socials" }
