--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
       <nav class="top_nav" aria-label="Main navigation">
         <ul>
-          <li><a href="index.html" class="nav-item">Home</a></li>
+          <li><a href="../index.html" class="nav-item">Home</a></li>
           <li><a href="html/about.html" class="nav-item">About</a></li>
           <li><a href="html/projects.html" class="nav-item">Projects</a></li>
           <li><a href="html/contact.html" class="nav-item">Contact</a></li>
