--- a/html/privacy.html
+++ b/html/privacy.html
@@ -31,7 +31,7 @@
     </header>
 
     <main>
-      <section class="main_content">
+      <section class="privacy-card">
         <h1>Privacy Policy</h1>
         <p>Last updated: June 20, 2025</p>
 
