--- a/html/projects.html
+++ b/html/projects.html
@@ -133,7 +133,7 @@
         <em>Download</em> and <em>Features</em> pages.
         <br><br>
         The site is hosted on Netlify and can be visited here:
-        <a href="https://685c23a6ad27078114126343--glistening-sfogliatella-3b4324.netlify.app/" target="_blank">Wintris
+        <a href="https://685c23a6ad27078114126343--glistening-sfogliatella-3b4324.netlify.app/" target="_blank" rel="noopener noreferrer">Wintris
           Page</a>.
       </p>
       <div class="overlay-image-wrapper">
