--- a/html/projects.html
+++ b/html/projects.html
@@ -156,7 +156,7 @@
 
     document.addEventListener('click', function (e) {
       if (e.target.classList.contains('overlay')) {
-        e.target.style.display = 'none';
+        hideOverlay();
       }
     });
   </script>
